data preparation update

--- a/artificial feature selection.ipynb
+++ b/artificial feature selection.ipynb
@@ -25,14 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2a9ce298",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_art = pd.read_csv('data/artificial_train.data', delim_whitespace=True, header=None)\n",
-    "test_art  = pd.read_csv('data/artificial_valid.data', delim_whitespace=True, header=None)\n",
-    "train_labels = pd.read_csv('data/artificial_train.labels', header=None)\n",
+    "from data_preparation import get_artificial_data\n",
+    "train_art, train_labels, test_art = get_artificial_data()\n",
     "train_labels = (train_labels == 1) + 0"
    ]
   },
