--- a/spam feature selection.ipynb
+++ b/spam feature selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c89f46c3",
    "metadata": {},
    "outputs": [],
@@ -26,41 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "b2c689b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_spam_training_data(file, labels, sep):\n",
-    "    spam_train = []\n",
-    "    spam_labels_train_spam = []\n",
-    "    with open(file, encoding='utf8') as f:\n",
-    "        for line in f:\n",
-    "            line = line.replace('\"', '')\n",
-    "            label, text = line.split(sep=sep, maxsplit=1)\n",
-    "            if label not in labels:\n",
-    "                continue\n",
-    "            spam_labels_train_spam.append(label)\n",
-    "            spam_train.append(text[:-1])\n",
-    "    cv = CountVectorizer(strip_accents='unicode')\n",
-    "    X = cv.fit_transform(spam_train)\n",
-    "    df = pd.DataFrame(X.toarray(),\n",
-    "                      columns=cv.get_feature_names_out())\n",
-    "    return df, spam_labels_train_spam, cv, spam_train\n",
+    "from data_preparation import get_spam_training_data, get_spam_test_data\n",
     "\n",
-    "def get_spam_test_data(file, cv):\n",
-    "    spam_test = []\n",
-    "    with open(file, encoding='utf8') as f:\n",
-    "        for line in f:\n",
-    "            line = line.replace('\"', '')\n",
-    "            spam_test.append(line[:-1])\n",
-    "    spam_test.pop(0)\n",
-    "    X = cv.transform(spam_test)\n",
-    "    df = pd.DataFrame(X.toarray(),\n",
-    "                  columns=cv.get_feature_names_out())\n",
-    "    return df, spam_test\n",
-    "\n",
-    "train_spam, labels_train_spam, cv_train, _ = get_spam_training_data('data/sms_train.csv', ['0', '1'], ',')\n",
+    "train_spam, labels_train_spam, cv_train = get_spam_training_data('data/sms_train.csv', ['0', '1'], ',')\n",
     "labels_train_spam = (np.array(labels_train_spam) == \"1\") + 0"
    ]
   },
